[metadata]
name = aws-scripts
version = 0.0.1
author = Kyle Laker
author_email = kyle@laker.email
description = Helper utilities for working with AWS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kylelaker/aws-scripts

[options]
packages = find:
python_requires = >=3.10
install_requires =
    boto3
    botocore
    click
    requests
    tabulate
    pyyaml
    pygit2
    boto3-stubs[all]

[options.entry_points]
console_scripts =
    aws-utils = aws_scripts.cli:main
